--- a/style.css
+++ b/style.css
@@ -15,6 +15,22 @@ body {
     display: flex;
 }
 
+img{
+	width: 700px;
+	padding-left: 200px; 
+	padding-top: 100px;
+}
+
+.prgf {
+	text-align: center;
+	font-family: 'Cafe';
+	color: white;
+	width: 100%;
+	font-size: 72px;
+	position: relative;
+	padding-top: 300px;
+}
+
 .menu
 {
 	position: absolute;
@@ -47,7 +63,7 @@ body {
 	width: 2px;
 	height: 100%;
 	transform: skewX(20deg);
-	background: gold;
+	background: #ffd700;
 	overflow: hidden;
 	transition: width 0.5s cubic-bezier(0.59,0.05,0.16,0.99);
 }
