--- a/style.css
+++ b/style.css
@@ -7,6 +7,14 @@
 *::before{
     box-sizing: border-box;
 }
+h1 {
+	font-size: 72px;
+	font-family: 'Cafe';
+	text-shadow: 5px -2px 1px rgb(219, 187, 7);
+}h2 {
+	font-family: 'TWThin';
+	font-size: 30px;
+}
 
 body {
     background-image: linear-gradient(-45deg, #302215,#000000);
@@ -14,21 +22,19 @@ body {
     min-height: 100vh;
     display: flex;
 }
-
-img{
-	width: 700px;
-	padding-left: 200px; 
-	padding-top: 100px;
+.redes {
+	align-items: center;
+	position: absolute;
+	display: flex;
+	gap: 50px;
+	top: 4%;
+	left: 5%;
 }
-
-.prgf {
-	text-align: center;
-	font-family: 'Cafe';
-	color: white;
-	width: 100%;
-	font-size: 72px;
-	position: relative;
-	padding-top: 300px;
+img {
+	height: 60%;
+	position: absolute;
+	top: 20%;
+	left: 15%;
 }
 
 .menu
@@ -37,7 +43,7 @@ img{
 	transform: translate(-50%, -50%);
 	top: 50px;
     font-family: 'Cafe';
-    right: -14vw;
+    right: -270px;
 }
 
 .nav
@@ -83,11 +89,103 @@ img{
 	width: calc(100% - 20px);
 }
 
+.hello {
+	position: absolute;
+	right: 10%;
+	top: 40%;
+	color: white;
+}
+.desc {
+	position: absolute;
+	right: 25%;
+	bottom: 45%;
+	color: white;
+}
+
+.line {
+	border-right: 2px solid white;
+	color: white;
+	font-family: 'TypeWriter';
+	font-size: 5em;
+	margin: 0 auto;
+	white-space: nowrap;
+	overflow: hidden;
+	letter-spacing: 6px;
+}
+
+.typing-animation {
+	animation: blinkCursor 1s infinite normal, typing 2s steps(16) 1s normal both;
+}
+
+@keyframes typing {
+	from {
+		width: 0;
+	}
+	to {
+		width: 10em;
+	}
+}
+
+@keyframes blinkCursor{
+	from {
+		border-right-color: white;
+	}
+	to {
+		border-right-color: transparent;
+	}
+}
+
+.wrapper {
+	display: flex;
+}
+
+.wrapper .txt-static {
+	color: white;
+	font-size: 40px;
+}
+
+.wrapper .txt-dinamic{
+	margin-left: 15px;
+
+}
+.wrapper .txt-dinamic li {
+	
+	list-style: none;
+	font-size: 40px;
+	position: relative;
+	color: #ffd700;
+	top: 0;
+	animation-name: slide;
+	animation-duration: 5s;
+	animation-timing-function: steps(3);
+	animation-iteration-count: infinite;
+}
+
+@keyframes slide {
+	100% {
+		top: -140px;
+	}
+}
+
+.wrapper .txt-dinamic li::after {
+	content: '';
+	position: absolute;
+	background: #302215;
+}
 
 @font-face {
     font-family: 'Cafe';
     src: url('fonts/Louis\ George\ Cafe.ttf') format('truetype');
 }
+@font-face {
+    font-family: 'TypeWriter';
+    src: url('fonts/JMH\ Typewriter.ttf') format('truetype');
+}
+@font-face {
+    font-family: 'TWThin';
+    src: url('fonts/JMH\ Typewriter-Thin.otf') format('truetype');
+}
+
 
 /*
 .color1 { #302215 };
