--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ img {
 		width: 0;
 	}
 	to {
-		width: 10em;
+		width: 100%;
 	}
 }
 
@@ -133,44 +133,6 @@ img {
 	to {
 		border-right-color: transparent;
 	}
-}
-
-.wrapper {
-	display: flex;
-}
-
-.wrapper .txt-static {
-	color: white;
-	font-size: 40px;
-}
-
-.wrapper .txt-dinamic{
-	margin-left: 15px;
-
-}
-.wrapper .txt-dinamic li {
-	
-	list-style: none;
-	font-size: 40px;
-	position: relative;
-	color: #ffd700;
-	top: 0;
-	animation-name: slide;
-	animation-duration: 5s;
-	animation-timing-function: steps(3);
-	animation-iteration-count: infinite;
-}
-
-@keyframes slide {
-	100% {
-		top: -140px;
-	}
-}
-
-.wrapper .txt-dinamic li::after {
-	content: '';
-	position: absolute;
-	background: #302215;
 }
 
 @font-face {
