--- a/style.css
+++ b/style.css
@@ -24,22 +24,22 @@ h2 {
 .bg {
 	background-image: linear-gradient(-45deg, #302215, #000000);
 	background-attachment: fixed;
-	min-height: 300vh;
+	min-height: 400vh;
 }
 
-.a-header{
+.a-header {
 	color: white;
 	text-decoration: none;
 
 }
 
-.sec{
-	height: 950px;
+.sec {
+	height: 100vh;
 	width: 100%;
-	
 }
-
-
+#sec2, #sec4{
+	background: #ffd700;
+}
 header {
 	position: fixed;
 	z-index: 1;
@@ -47,6 +47,10 @@ header {
 	height: 100px;
 	display: flex;
 	justify-content: center;
+}
+.header-bg{
+	width: 100%;
+	height: 100%;
 	
 }
 
@@ -63,12 +67,23 @@ header {
 	opacity: 0.5;
 }
 
-img {
+.img-perfil {
 	height: 60%;
 	position: absolute;
 	top: 20%;
 	left: 15%;
 	pointer-events: none;
+
+	animation: luzes 3s alternate infinite ease-in-out;
+}
+
+@keyframes luzes {
+	from{
+		filter: drop-shadow(0 0 10px #ffd700);
+	}
+	to{
+		filter: drop-shadow(0 0 40px #ffd700);
+	}
 }
 
 .menu {
